fixing drop menu text overflow

--- a/assets/css/dropdown_menu.css
+++ b/assets/css/dropdown_menu.css
@@ -15,7 +15,7 @@
   height: 270px;
   z-index: 2;
   border: 1px solid black;
-  width: 42%;
+  width: 50%;
 }
 
 .dropdown-menu li {
